Atualização do Aluraflix2

--- a/4ºDia - Aluraflix2/index.html
+++ b/4ºDia - Aluraflix2/index.html
@@ -27,6 +27,10 @@
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
     </a>
 
+    <!--<div id="res"></div>-->
+
     <script src="./script.js"></script>
+    <!-- v4 -->
+    <script src='https://unpkg.com/tesseract.js@4.0.2/dist/tesseract.min.js'></script>
 </body>
 </html>
